# nucleus

./: .clippy.toml  .env.example  .gitignore  .release-please-manifest.json  CLAUDE.md  Cargo.toml  README.md  bacon.toml  codecov.yml  deny.toml  release-please-config.json  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml  security.yml
.github/workflows/: ci.yml  claude-analysis.yml  issue-comment-handler.yml  issue-triage.yml  load-test.yml  publish-sdks.yml  release-please.yml  release.yml  sdk-publish.yml  security.yml  weekly-digest.yml
crates/nucleus-admin-api/: Cargo.toml
crates/nucleus-admin-api/src/: api_key.rs  billing.rs  lib.rs
crates/nucleus-admin-api/src/handlers/: dashboard.rs
crates/nucleus-auth/: Cargo.toml
crates/nucleus-auth/benches/: jwt_benchmarks.rs
crates/nucleus-auth/src/: jwt.rs  lib.rs  magic_link.rs  mfa.rs  otp.rs  passkey.rs  password.rs  password_reset.rs  pkce.rs  service.rs
crates/nucleus-auth/src/handlers/: magic_link.rs  mfa.rs  mod.rs  oauth.rs  otp.rs  passkey.rs  password_reset.rs  sign_in.rs  sign_up.rs  token.rs
crates/nucleus-auth/src/oauth/: apple.rs  discord.rs  facebook.rs  github.rs  google.rs  linkedin.rs  microsoft.rs  mod.rs  provider.rs  slack.rs  twitter.rs
crates/nucleus-auth/src/saml/: service.rs
crates/nucleus-core/: Cargo.toml
crates/nucleus-core/benches/: auth_benchmarks.rs
crates/nucleus-core/src/: crypto.rs  error.rs  lib.rs  notification.rs  pagination.rs  types.rs  validation.rs
crates/nucleus-db/: Cargo.toml
crates/nucleus-db/src/: lib.rs  redis.rs
crates/nucleus-db/src/repos/: api_key_repo.rs  audit_repo.rs  credential_repo.rs  mfa_enrollment_repo.rs  mod.rs  org_repo.rs  project_repo.rs  session_repo.rs  signing_key_repo.rs  user_repo.rs  verification_token_repo.rs  webhook_repo.rs
crates/nucleus-identity/: Cargo.toml
crates/nucleus-identity/src/: lib.rs  user.rs
crates/nucleus-identity/src/handlers/: admin.rs  me.rs  mod.rs
crates/nucleus-migrate/: Cargo.toml
crates/nucleus-migrate/migrations/: 001_create_accounts.sql  002_create_plans.sql  004_create_users.sql  006_create_mfa.sql  007_create_orgs.sql  008_create_roles_permissions.sql  010_create_webhooks.sql  012_create_templates.sql  015_create_saml_connections.sql
crates/nucleus-migrate/src/: lib.rs
crates/nucleus-org/: Cargo.toml
crates/nucleus-server/: CHANGELOG.md  Cargo.toml
crates/nucleus-server/src/: config.rs  main.rs  router.rs  state.rs
crates/nucleus-server/src/handlers/: admin.rs  auth.rs  dashboard.rs  identity.rs  mod.rs  org.rs  webhook.rs  well_known.rs
crates/nucleus-server/src/middleware/: auth.rs  metrics.rs  rate_limit.rs  request_id.rs
crates/nucleus-server/src/services/: email.rs  sms.rs
crates/nucleus-session/: Cargo.toml
crates/nucleus-session/src/: lib.rs  session.rs
crates/nucleus-webhook/: Cargo.toml
crates/nucleus-webhook/src/: delivery.rs  dispatcher.rs  events.rs  lib.rs
crates/nucleus-webhook/src/handlers/: admin.rs
dashboard/: CHANGELOG.md  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
deploy/grafana/: k6-dashboard.json  nucleus-dashboard.json
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
docs/: integration-guide.md
docs/plans/: 2026-03-19-nucleus-design.md  2026-03-19-nucleus-implementation.md  2026-03-20-implement-incomplete-sdks.md  2026-03-20-incomplete-sdks-design.md  2026-03-30-sdk-publishing.md  (+9 more)
e2e/: Dockerfile  docker-compose.yml  package-lock.json  package.json  playwright.config.ts
load-tests/: admin-api.k6.js  auth-flow.k6.js  smoke.k6.js  token-refresh.k6.js
scripts/: pre-commit  setup-hooks.sh
sdks/python/: CHANGELOG.md  README.md  pyproject.toml
sdks/python/src/nucleus/: __init__.py  claims.py  client.py  django.py  fastapi.py  flask.py  sync.py  verify.py
sdks/python/tests/: conftest.py  test_client.py  test_verify.py
sdks/rust/: CHANGELOG.md  Cargo.toml  README.md
sdks/rust/src/: actix.rs  axum.rs  claims.rs  client.rs  lib.rs  verify.rs
sdks/rust/src/admin/: mod.rs  orgs.rs  users.rs
server/: Cargo.toml
server/migrations/: 003_create_projects.sql  005_create_credentials.sql  009_create_audit_logs.sql  011_create_oauth_providers.sql  013_create_api_keys_signing_keys.sql  014_encrypt_webhook_secret.sql
server/src/: config.rs  lib.rs  main.rs  router.rs  state.rs
server/src/api/: analytics.rs  mod.rs  project.rs  provider.rs  settings.rs  signing_key.rs  template.rs
server/src/api/handlers/: dashboard.rs
server/src/auth/: jwt.rs  magic_link.rs  mfa.rs  mod.rs  otp.rs  passkey.rs  password.rs  password_reset.rs  service.rs
server/src/auth/handlers/: magic_link.rs  mfa.rs  mod.rs  oauth.rs  otp.rs  passkey.rs  password_reset.rs  sign_in.rs  sign_up.rs  token.rs
server/src/auth/oauth/: apple.rs  discord.rs  facebook.rs  github.rs  google.rs  linkedin.rs  microsoft.rs  provider.rs  slack.rs  twitter.rs
server/src/auth/saml/: service.rs
server/src/core/: clock.rs  crypto.rs  mod.rs  notification.rs  pagination.rs  types.rs  validation.rs
server/src/db/: mod.rs  pool.rs
server/src/db/repos/: api_key_repo.rs  audit_repo.rs  credential_repo.rs  mfa_enrollment_repo.rs  mod.rs  org_repo.rs  project_repo.rs  session_repo.rs  signing_key_repo.rs  user_repo.rs  verification_token_repo.rs  webhook_repo.rs
server/src/handlers/: admin.rs  auth.rs  dashboard.rs  identity.rs  org.rs  webhook.rs  well_known.rs
server/src/identity/: mod.rs  user.rs
server/src/identity/handlers/: admin.rs  me.rs
server/src/middleware/: auth.rs  metrics.rs  rate_limit.rs  request_id.rs
server/src/org/: invitation.rs  mod.rs  organization.rs  permission.rs  role.rs
server/src/org/handlers/: invitation.rs  member.rs  org.rs
server/src/services/: email.rs  sms.rs
server/src/session/: mod.rs
server/src/webhook/: dispatcher.rs  events.rs
server/src/webhook/handlers/: admin.rs
templates/: nucleus_template.sql
(+290 files in other folders)
