[package]
name = "cntm-nucleus-server"
version = "0.1.0"
license = "MIT"
description = "Nucleus authentication server — production-grade auth SaaS"
repository = "https://github.com/cntm-labs/nucleus"
edition = "2021"

[dependencies]
# Web
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Crypto
argon2 = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
ring = { workspace = true }
jsonwebtoken = { workspace = true }
webauthn-rs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Config
dotenvy = { workspace = true }

# Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
quick-xml = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
