[package]
name = "nucleus-admin-api"
version = "0.1.0"
license = "MIT"
description = "Admin dashboard API for Nucleus project management"
repository = "https://github.com/cntm-labs/nucleus"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core", version = "0.1.0" }
nucleus-db = { path = "../nucleus-db", version = "0.1.0" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
