[package]
name = "nucleus-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core" }
nucleus-db = { path = "../nucleus-db" }
nucleus-session = { path = "../nucleus-session" }
argon2 = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "jwt_benchmarks"
harness = false
