[package]
name = "nucleus-auth"
version = "0.1.0"
license = "MIT"
description = "Authentication module (password, JWT, OAuth, MFA, passkeys) for Nucleus"
repository = "https://github.com/cntm-labs/nucleus"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core", version = "0.1.0" }
nucleus-db = { path = "../nucleus-db", version = "0.1.0" }
nucleus-session = { path = "../nucleus-session", version = "0.1.0" }
redis = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
quick-xml = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "jwt_benchmarks"
harness = false
