[package]
name = "nucleus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
