[package]
name = "nucleus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
ring = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
