[package]
name = "nucleus-db"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core" }
sqlx = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
