[package]
name = "nucleus-db"
version = "0.1.0"
license = "MIT"
description = "Database repository traits and implementations for Nucleus"
repository = "https://github.com/cntm-labs/nucleus"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core", version = "0.1.0" }
sqlx = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
