[package]
name = "nucleus-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core" }
nucleus-db = { path = "../nucleus-db" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
axum = { workspace = true }
