[package]
name = "nucleus-identity"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core", version = "0.1.0" }
nucleus-db = { path = "../nucleus-db", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
axum = { workspace = true }

[lints]
workspace = true
