[package]
name = "nucleus-migrate"
version = "0.1.0"
license = "MIT"
description = "Database migrations for the Nucleus auth platform"
repository = "https://github.com/cntm-labs/nucleus"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
