[package]
name = "nucleus-server"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core", version = "0.1.0" }
nucleus-db = { path = "../nucleus-db", version = "0.1.0" }
nucleus-auth = { path = "../nucleus-auth", version = "0.1.0" }
nucleus-identity = { path = "../nucleus-identity", version = "0.1.0" }
nucleus-org = { path = "../nucleus-org", version = "0.1.0" }
nucleus-session = { path = "../nucleus-session", version = "0.1.0" }
nucleus-webhook = { path = "../nucleus-webhook", version = "0.1.0" }
nucleus-admin-api = { path = "../nucleus-admin-api", version = "0.1.0" }
nucleus-migrate = { path = "../nucleus-migrate", version = "0.1.0" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
