[package]
name = "nucleus-session"
version = "0.1.0"
license = "MIT"
description = "Redis-backed session management for Nucleus"
repository = "https://github.com/cntm-labs/nucleus"
edition = "2021"

[dependencies]
nucleus-core = { path = "../nucleus-core", version = "0.1.0" }
nucleus-db = { path = "../nucleus-db", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
