[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cntm-nucleus"
version = "0.2.0"
description = "Nucleus authentication SDK for Python."
license = {text = "MIT"}
authors = [{name = "cntm-labs", email = "dev@cntm-labs.dev"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["authentication", "auth", "nucleus", "sdk", "jwt", "oauth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Django",
    "Framework :: Flask",
    "Topic :: Security",
]
dependencies = ["httpx>=0.27", "PyJWT[crypto]>=2.9", "cryptography>=43.0"]

[project.urls]
Homepage = "https://github.com/cntm-labs/nucleus"
Repository = "https://github.com/cntm-labs/nucleus"
Issues = "https://github.com/cntm-labs/nucleus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nucleus"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115"]
django = ["django>=4.2"]
flask = ["flask>=3.0"]
test = ["pytest>=8.0", "respx>=0.22"]
